--- a/index.html
+++ b/index.html
@@ -393,5 +393,12 @@ function scrollToTop() {
       to { opacity: 1; transform: scale(1); }
     }
   </style>
+  </style>
+<section id="music-visualization">
+  <h2>[波譜]音樂視覺化動畫練習作品</h2>
+  <img src="images/bopo.jpg" alt="音樂視覺化波譜作品" style="width:100%; max-width:600px; border-radius:12px;">
+</section>
+</body>
+
 </body>
 </html>
