加入音樂視覺化動畫作品連結

--- a/index.html
+++ b/index.html
@@ -393,12 +393,16 @@ function scrollToTop() {
       to { opacity: 1; transform: scale(1); }
     }
   </style>
-  </style>
-<section id="music-visualization">
-  <h2>[波譜]音樂視覺化動畫練習作品</h2>
-  <img src="images/bopo.jpg" alt="音樂視覺化波譜作品" style="width:100%; max-width:600px; border-radius:12px;">
-</section>
-</body>
+<div class="media-section">
+  <h2>音樂視覺化動畫作品</h2>
+  <img src="images/bopo.jpg" alt="音樂視覺化動畫封面" style="width: 60%; max-width: 600px; display: block; margin: 10px auto;">
+
+  <div style="text-align: center; margin-top: 20px;">
+    <a href="https://www.youtube.com/watch?v=YBqpde2lK7M" target="_blank" style="font-size: 18px; color: #0066cc;">
+      👉 點我觀看作品影片
+    </a>
+  </div>
+</div>
 
 </body>
 </html>
