--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 <section id="core" class="content-page core-bg">
   <h2>🌍 母星影片</h2>
-  <p>這裡收藏著屬於我和家中寵物最溫暖的片刻。</p>
+  <p>這裡收藏著屬於我的影片和作品連結。</p>
 
   <div style="margin-bottom: 30px;">
     <video width="640" height="360" controls>
@@ -235,7 +235,16 @@
     <p>📹 全家影片 1</p>
   </div>
 </section>
+<div class="media-section">
+  <h2>音樂視覺化動畫作品</h2>
+  <img src="images/bopo.jpg" alt="音樂視覺化動畫封面" style="width: 60%; max-width: 600px; display: block; margin: 10px auto;">
 
+  <div style="text-align: center; margin-top: 20px;">
+    <a href="https://www.youtube.com/watch?v=YBqpde2lK7M" target="_blank" style="font-size: 18px; color: #0066cc;">
+      👉 點我觀看作品影片
+    </a>
+  </div>
+</div>
 
  <section id="contact" class="content-page contact-bg">
   <h2>📬 聯絡留言</h2>
@@ -393,16 +402,6 @@ function scrollToTop() {
       to { opacity: 1; transform: scale(1); }
     }
   </style>
-<div class="media-section">
-  <h2>音樂視覺化動畫作品</h2>
-  <img src="images/bopo.jpg" alt="音樂視覺化動畫封面" style="width: 60%; max-width: 600px; display: block; margin: 10px auto;">
-
-  <div style="text-align: center; margin-top: 20px;">
-    <a href="https://www.youtube.com/watch?v=YBqpde2lK7M" target="_blank" style="font-size: 18px; color: #0066cc;">
-      👉 點我觀看作品影片
-    </a>
-  </div>
-</div>
 
 </body>
 </html>
