連結影片位置更改

--- a/index.html
+++ b/index.html
@@ -224,27 +224,25 @@
 </section>
 
 <section id="core" class="content-page core-bg">
-  <h2>🌍 母星影片</h2>
-  <p>這裡收藏著屬於我的影片和作品連結。</p>
-
-  <div style="margin-bottom: 30px;">
-    <video width="640" height="360" controls>
-      <source src="images/全家.mp4" type="video/mp4">
-      您的瀏覽器不支援影片播放。
-    </video>
-    <p>📹 全家影片 1</p>
-  </div>
-</section>
+  <h2>🌍 母星影片與連結</h2>
+  <p>這裡收藏著屬於我的作品連結和影片。</p>
 <div class="media-section">
   <h2>音樂視覺化動畫作品</h2>
   <img src="images/bopo.jpg" alt="音樂視覺化動畫封面" style="width: 60%; max-width: 600px; display: block; margin: 10px auto;">
-
   <div style="text-align: center; margin-top: 20px;">
     <a href="https://www.youtube.com/watch?v=YBqpde2lK7M" target="_blank" style="font-size: 18px; color: #0066cc;">
       👉 點我觀看作品影片
     </a>
   </div>
 </div>
+  <div style="margin-bottom: 30px;">
+    <video width="640" height="360" controls>
+      <source src="images/全家.mp4" type="video/mp4">
+      您的瀏覽器不支援影片播放。
+    </video>
+    <p>📹 寵鳥全家影片 1</p>
+  </div>
+</section>
 
  <section id="contact" class="content-page contact-bg">
   <h2>📬 聯絡留言</h2>
