--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
       height: auto;
     }
   }
+   .fade-in-section {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 0.8s ease-out;
+  will-change: opacity, transform;
+}
+
+.fade-in-section.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 </style>
 
 </head>
@@ -235,6 +247,7 @@
     </a>
   </div>
 </div>
+  <br><br>
   <div style="margin-bottom: 30px;">
     <video width="640" height="360" controls>
       <source src="images/全家.mp4" type="video/mp4">
@@ -400,6 +413,25 @@ function scrollToTop() {
       to { opacity: 1; transform: scale(1); }
     }
   </style>
+<script>
+  const faders = document.querySelectorAll('.fade-in-section');
+  const appearOptions = {
+    threshold: 0.1
+  };
+
+  const appearOnScroll = new IntersectionObserver(function(entries, observer) {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add("show");
+        observer.unobserve(entry.target);
+      }
+    });
+  }, appearOptions);
+
+  faders.forEach(fader => {
+    appearOnScroll.observe(fader);
+  });
+</script>
 
 </body>
 </html>
