區塊漸入入

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
  <!-- 動物星球 -->
 <section id="animal" class="content-page animal-bg active">
   <section class="home-pets-preview">
-    <h2>🐾 我的寵物們</h2>
+    <h2 class="fade-in-section">🐾 我的寵物們</h2>
     <div class="pet-preview">
       <div class="preview-card" onclick="openLightbox('綠綠（爸爸）', 'images/綠綠3.jpg', '牡丹鸚鵡，2.5歲，個性溫和、會撒嬌，喜歡站在肩膀上。')">
         <img src="images/綠綠3.jpg" alt="綠綠">
@@ -145,7 +145,7 @@
 
 <!-- 🌿 植物星球 -->
 <section id="plant" class="content-page plant-bg">
-  <h2>🌿 植物星球</h2>
+  <h2 class="fade-in-section" >🌿 植物星球</h2>
   <p>這裡是我與植物們的秘密花園。它們靜靜陪著我，也讓日子變得柔軟。</p>
 
   <div class="pet-preview">
@@ -187,7 +187,7 @@
 
 <!-- 🎨 創作星球 -->
 <section id="create" class="content-page create-bg">
-  <h2>🎨 創作星球</h2>
+  <h2 class="fade-in-section">🎨 創作星球</h2>
   <p>歡迎來到我的創作空間。這裡收藏著我在課堂與生活中完成的作品，無論是人像、水彩、壓克力還是雕刻，都是我用心留下的足跡。</p>
 
   <div class="pet-preview">
@@ -236,7 +236,7 @@
 </section>
 
 <section id="core" class="content-page core-bg">
-  <h2>🌍 母星影片與連結</h2>
+  <h2 class="fade-in-section">🌍 母星影片與連結</h2>
   <p>這裡收藏著屬於我的作品連結和影片。</p>
 <div class="media-section">
   <h2>音樂視覺化動畫作品</h2>
@@ -253,7 +253,7 @@
       <source src="images/全家.mp4" type="video/mp4">
       您的瀏覽器不支援影片播放。
     </video>
-    <p>📹 寵鳥全家影片 1</p>
+    <p class="fade-in-section">📹 寵鳥全家影片 1</p>
   </div>
 </section>
 
