--- a/index.html
+++ b/index.html
@@ -115,27 +115,27 @@
     <div class="pet-preview">
       <div class="preview-card" onclick="openLightbox('綠綠（爸爸）', 'images/綠綠3.jpg', '牡丹鸚鵡，2.5歲，個性溫和、會撒嬌，喜歡站在肩膀上。')">
         <img src="images/綠綠3.jpg" alt="綠綠">
-        <p>綠綠（爸爸）</p>
+        <p class="fade-in-section">綠綠（爸爸）</p>
       </div>
       <div class="preview-card" onclick="openLightbox('紫頭（媽媽）', 'images/紫頭綠綠1.jpg', '牡丹鸚鵡，3歲，紫色頭的媽媽，個性穩重有點酷。')">
         <img src="images/紫頭綠綠1.jpg" alt="紫頭">
-        <p>紫頭（媽媽）</p>
+        <p class="fade-in-section">紫頭（媽媽）</p>
       </div>
       <div class="preview-card" onclick="openLightbox('青青（兒子1）', 'images/青青白白1.jpg', '綠綠與紫頭的孩子之一，愛跳來跳去。')">
         <img src="images/青青白白1.jpg" alt="青青與白白">
-        <p>青青（兒子1）</p>
+        <p class="fade-in-section">青青（兒子1）</p>
       </div>
       <div class="preview-card" onclick="openLightbox('白白（兒子2）', 'images/白白2.jpg', '另一隻寶寶白白，羽毛潔白，是家中開朗的成員。')">
         <img src="images/白白2.jpg" alt="白白">
-        <p>白白（兒子2）</p>
+        <p class="fade-in-section">白白（兒子2）</p>
       </div>
       <div class="preview-card" onclick="openLightbox('四指陸龜', 'images/龜4.jpg', '10歲的四指陸龜，喜歡曬太陽與吃地瓜葉。')">
         <img src="images/龜4.jpg" alt="四指陸龜">
-        <p>四指陸龜</p>
+        <p class="fade-in-section">四指陸龜</p>
       </div>
       <div class="preview-card" onclick="openLightbox('錦鯉群', 'images/魚1.jpg', '家中後院的七隻玉如意錦鯉，每天優雅游來游去。')">
         <img src="images/魚1.jpg" alt="錦鯉群">
-        <p>錦鯉群</p>
+        <p class="fade-in-section">錦鯉群</p>
       </div>
     </div>
   </section>
@@ -146,40 +146,40 @@
 <!-- 🌿 植物星球 -->
 <section id="plant" class="content-page plant-bg">
   <h2 class="fade-in-section" >🌿 植物星球</h2>
-  <p>這裡是我與植物們的秘密花園。它們靜靜陪著我，也讓日子變得柔軟。</p>
+  <p class="fade-in-section" >這裡是我與植物們的秘密花園。它們靜靜陪著我，也讓日子變得柔軟。</p>
 
   <div class="pet-preview">
     <div class="preview-card" onclick="openLightbox('多肉寶寶 A', 'images/多肉1.jpg', '這是我第一盆種植的多肉植物，很會吸水，也讓我開始愛上園藝。')">
       <img src="images/多肉1.jpg" alt="多肉植物1">
-      <p>多肉寶寶 A</p>
+      <p class="fade-in-section">多肉寶寶 A</p>
     </div>
     <div class="preview-card" onclick="openLightbox('多肉寶寶 B', 'images/多肉2.jpg', '葉片圓潤可愛，總讓人心情好。')">
       <img src="images/多肉2.jpg" alt="多肉植物2">
-      <p>多肉寶寶 B</p>
+      <p class="fade-in-section">多肉寶寶 B</p>
     </div>
     <div class="preview-card" onclick="openLightbox('多肉寶寶 C', 'images/多肉3.jpg', '放在窗邊，每天看它長大是件幸福的事。')">
       <img src="images/多肉3.jpg" alt="多肉植物3">
-      <p>多肉寶寶 C</p>
+      <p class="fade-in-section">多肉寶寶 C</p>
     </div>
     <div class="preview-card" onclick="openLightbox('陽台草莓', 'images/草莓1.jpg', '這是我親手種出的第一顆紅草莓，超級開心！')">
       <img src="images/草莓1.jpg" alt="草莓">
-      <p>陽台草莓</p>
+      <p class="fade-in-section">陽台草莓</p>
     </div>
     <div class="preview-card" onclick="openLightbox('鹿角蕨 A', 'images/鹿角蕨1.jpg', '喜歡它像麋鹿角的造型，是非常療癒的植物。')">
       <img src="images/鹿角蕨1.jpg" alt="鹿角蕨1">
-      <p>鹿角蕨 A</p>
+      <p class="fade-in-section">鹿角蕨 A</p>
     </div>
     <div class="preview-card" onclick="openLightbox('鹿角蕨 B', 'images/鹿角蕨2.jpg', '掛在牆上像一幅自然畫。')">
       <img src="images/鹿角蕨2.jpg" alt="鹿角蕨2">
-      <p>鹿角蕨 B</p>
+      <p class="fade-in-section">鹿角蕨 B</p>
     </div>
     <div class="preview-card" onclick="openLightbox('玫瑰 A', 'images/玫瑰1.jpg', '夏天盛開的玫瑰，每一朵都有不同香味。')">
       <img src="images/玫瑰1.jpg" alt="玫瑰1">
-      <p>玫瑰 A</p>
+      <p class="fade-in-section" >玫瑰 A</p>
     </div>
     <div class="preview-card" onclick="openLightbox('玫瑰 B', 'images/玫瑰2.jpg', '喜歡這顏色柔和的玫瑰，像午後的陽光。')">
       <img src="images/玫瑰2.jpg" alt="玫瑰2">
-      <p>玫瑰 B</p>
+      <p class="fade-in-section" >玫瑰 B</p>
     </div>
   </div>
 </section>
@@ -188,48 +188,48 @@
 <!-- 🎨 創作星球 -->
 <section id="create" class="content-page create-bg">
   <h2 class="fade-in-section">🎨 創作星球</h2>
-  <p>歡迎來到我的創作空間。這裡收藏著我在課堂與生活中完成的作品，無論是人像、水彩、壓克力還是雕刻，都是我用心留下的足跡。</p>
+  <p class="fade-in-section" >歡迎來到我的創作空間。這裡收藏著我在課堂與生活中完成的作品，無論是人像、水彩、壓克力還是雕刻，都是我用心留下的足跡。</p>
 
   <div class="pet-preview">
 
     <div class="preview-card" onclick="openLightbox('小品水彩', 'images/水彩1.jpg', '這是課堂上的水彩小練習，色彩表現柔和。')">
       <img src="images/水彩1.jpg" alt="水彩">
-      <p>小品水彩</p>
+      <p class="fade-in-section">小品水彩</p>
     </div>
 
     <div class="preview-card" onclick="openLightbox('馬賽克自畫像', 'images/人像2.jpg', '結合幾何與色塊，畫出內在的自己。')">
       <img src="images/人像2.jpg" alt="人像">
-      <p>馬賽克自畫像</p>
+      <p class="fade-in-section">馬賽克自畫像</p>
     </div>
 
     <div class="preview-card" onclick="openLightbox('石膏浮雕練習', 'images/石膏雕刻1.jpg', '用雕刻刀慢慢雕出線條與立體感。')">
       <img src="images/石膏雕刻1.jpg" alt="石膏雕刻">
-      <p>石膏浮雕練習</p>
+      <p class="fade-in-section">石膏浮雕練習</p>
     </div>
 
     <div class="preview-card" onclick="openLightbox('老宅壓克力風景', 'images/壓克力1.jpg', '紀錄一間老屋在陽光下的安靜模樣。')">
       <img src="images/壓克力1.jpg" alt="壓克力創作1">
-      <p>老宅壓克力風景</p>
+      <p class="fade-in-section" >老宅壓克力風景</p>
     </div>
 
     <div class="preview-card" onclick="openLightbox('舊城街道系列', 'images/壓克力2.jpg', '色塊與筆觸描繪出城市的紋理與節奏。')">
       <img src="images/壓克力2.jpg" alt="壓克力創作2">
-      <p>舊城街道系列</p>
+      <p class="fade-in-section">舊城街道系列</p>
     </div>
 
     <div class="preview-card" onclick="openLightbox('水墨 京都友誼', 'images/水墨2.jpg', '朋友送的畫材，在京都旅途中留下紀念。')">
       <img src="images/水墨2.jpg" alt="水墨">
-      <p>水墨 京都友誼</p>
+      <p class="fade-in-section">水墨 京都友誼</p>
     </div>
 
     <div class="preview-card" onclick="openLightbox('畢展水彩', 'images/水彩2.jpg', '這是我參與畢業展的一幅作品。')">
       <img src="images/水彩2.jpg" alt="水彩">
-      <p>畢展水彩</p>
+      <p class="fade-in-section">畢展水彩</p>
     </div>
 
     <div class="preview-card" onclick="openLightbox('黛安娜王妃', 'images/人像1.jpg', '描繪她優雅眼神中藏著的堅定與柔情。')">
       <img src="images/人像1.jpg" alt="人像">
-      <p>黛安娜王妃</p>
+      <p class="fade-in-section">黛安娜王妃</p>
     </div>
 
   </div>
@@ -239,7 +239,7 @@
   <h2 class="fade-in-section">🌍 母星影片與連結</h2>
   <p>這裡收藏著屬於我的作品連結和影片。</p>
 <div class="media-section">
-  <h2>音樂視覺化動畫作品</h2>
+  <h2 class="fade-in-section" >音樂視覺化動畫作品</h2>
   <img src="images/bopo.jpg" alt="音樂視覺化動畫封面" style="width: 60%; max-width: 600px; display: block; margin: 10px auto;">
   <div style="text-align: center; margin-top: 20px;">
     <a href="https://www.youtube.com/watch?v=YBqpde2lK7M" target="_blank" style="font-size: 18px; color: #0066cc;">
@@ -258,8 +258,8 @@
 </section>
 
  <section id="contact" class="content-page contact-bg">
-  <h2>📬 聯絡留言</h2>
-  <p>有任何想對我說的話，歡迎留言給我！</p>
+  <h2 class="fade-in-section">📬 聯絡留言</h2>
+  <p class="fade-in-section">有任何想對我說的話，歡迎留言給我！</p>
 
  <form onsubmit="handleSubmit(event)" style="max-width: 500px; margin: auto; text-align: left;">
 
