調整圖片文字

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <p class="fade-in-section" >這裡是我與植物們的秘密花園。它們靜靜陪著我，也讓日子變得柔軟。</p>
 
   <div class="pet-preview">
-    <div class="preview-card" onclick="openLightbox('多肉寶寶 A', 'images/多肉1.jpg', '這是我第一盆種植的多肉植物，很會吸水，也讓我開始愛上園藝。')">
+    <div class="preview-card" onclick="openLightbox('多肉寶寶 A', 'images/多肉1.jpg', '第一盆種植的多肉植物，很會吸水，也讓我開始愛上園藝。')">
       <img src="images/多肉1.jpg" alt="多肉植物1">
       <p class="fade-in-section">多肉寶寶 A</p>
     </div>
@@ -161,7 +161,7 @@
       <img src="images/多肉3.jpg" alt="多肉植物3">
       <p class="fade-in-section">多肉寶寶 C</p>
     </div>
-    <div class="preview-card" onclick="openLightbox('陽台草莓', 'images/草莓1.jpg', '這是我親手種出的第一顆紅草莓，超級開心！')">
+    <div class="preview-card" onclick="openLightbox('陽台草莓', 'images/草莓1.jpg', '這是種出的第一顆紅草莓，超級開心！')">
       <img src="images/草莓1.jpg" alt="草莓">
       <p class="fade-in-section">陽台草莓</p>
     </div>
@@ -212,17 +212,17 @@
       <p class="fade-in-section" >老宅壓克力風景</p>
     </div>
 
-    <div class="preview-card" onclick="openLightbox('舊城街道系列', 'images/壓克力2.jpg', '色塊與筆觸描繪出城市的紋理與節奏。')">
+    <div class="preview-card" onclick="openLightbox('舊城街道系列', 'images/壓克力2.jpg', '筆觸描繪老木屋的紋理與節奏。')">
       <img src="images/壓克力2.jpg" alt="壓克力創作2">
       <p class="fade-in-section">舊城街道系列</p>
     </div>
 
-    <div class="preview-card" onclick="openLightbox('水墨 京都友誼', 'images/水墨2.jpg', '朋友送的畫材，在京都旅途中留下紀念。')">
+    <div class="preview-card" onclick="openLightbox('水墨 京都友誼', 'images/水墨2.jpg', '朋友在京都旅途中留下紀念。')">
       <img src="images/水墨2.jpg" alt="水墨">
       <p class="fade-in-section">水墨 京都友誼</p>
     </div>
 
-    <div class="preview-card" onclick="openLightbox('畢展水彩', 'images/水彩2.jpg', '這是我參與畢業展的一幅作品。')">
+    <div class="preview-card" onclick="openLightbox('畢展水彩', 'images/水彩2.jpg', '高中畢業展的一幅作品。')">
       <img src="images/水彩2.jpg" alt="水彩">
       <p class="fade-in-section">畢展水彩</p>
     </div>
@@ -277,7 +277,7 @@
 </section>
 
 <button id="backToTop" onclick="scrollToTop()">⬆ 回到頂端</button>
-<button onclick="toggleMusic()">🎵 背景音樂 開關</button>
+<button onclick="toggleMusic()">🎵 背景音樂 </button>
 
 <script>
   const music = document.getElementById('bg-music');
