--- a/index.html
+++ b/index.html
@@ -248,13 +248,15 @@
   </div>
 </div>
   <br><br>
-  <div style="margin-bottom: 30px;">
-    <video width="640" height="360" controls>
-      <source src="images/全家.mp4" type="video/mp4">
-      您的瀏覽器不支援影片播放。
-    </video>
-    <p class="fade-in-section">📹 寵鳥全家影片 1</p>
+ <div class="media-section">
+  <h2 class="fade-in-section" >寵鳥全家</h2>
+  <img src="images/全家.jpg" alt="鳥" style="width: 60%; max-width: 600px; display: block; margin: 10px auto;">
+  <div style="text-align: center; margin-top: 20px;">
+    <a href="https://youtu.be/iMjz0AouQjs" target="_blank" style="font-size: 18px; color: #0066cc;">
+      👉 點我觀看作品影片
+    </a>
   </div>
+</div>
 </section>
 
  <section id="contact" class="content-page contact-bg">
