--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
   <br><br>
  <div class="media-section">
   <h2 class="fade-in-section" >寵鳥全家</h2>
-  <img src="images/全家.jpg" alt="鳥" style="width: 60%; max-width: 600px; display: block; margin: 10px auto;">
+  <img src="images/全家.jpg" alt="全家" style="width: 60%; max-width: 600px; display: block; margin: 10px auto;">
   <div style="text-align: center; margin-top: 20px;">
     <a href="https://youtu.be/iMjz0AouQjs" target="_blank" style="font-size: 18px; color: #0066cc;">
-      👉 點我觀看作品影片
+      👉 點我觀看影片
     </a>
   </div>
 </div>
