--- a/index.html
+++ b/index.html
@@ -231,9 +231,26 @@
       <img src="images/人像1.jpg" alt="人像">
       <p class="fade-in-section">黛安娜王妃</p>
     </div>
-
   </div>
 </section>
+<!-- 📝 星際日記 -->
+<section id="diary" class="content-page diary-bg">
+  <h2 class="fade-in-section">📝 星際日記</h2>
+  <p class="fade-in-section">這裡記錄著我生活的片段與心情，有時候是喜悅的時光，有時候則是寧靜的沉澱。</p>
+
+  <div class="pet-preview">
+    <div class="preview-card" onclick="openLightbox('日記 A', 'images/日記1.jpg', '某天走在林間的靈感速寫。')">
+      <img src="images/日記1.jpg" alt="日記1">
+      <p class="fade-in-section">日記 A</p>
+    </div>
+
+    <div class="preview-card" onclick="openLightbox('日記 B', 'images/日記2.jpg', '夜裡的手帳塗鴉，紀錄下心情波動。')">
+      <img src="images/日記2.jpg" alt="日記2">
+      <p class="fade-in-section">日記 B</p>
+    </div>
+  </div>
+</section>
+
 
 <section id="core" class="content-page core-bg">
   <h2 class="fade-in-section">🌍 母星影片與連結</h2>
