--- a/index.html
+++ b/index.html
@@ -236,20 +236,32 @@
 <!-- 📝 星際日記 -->
 <section id="diary" class="content-page diary-bg">
   <h2 class="fade-in-section">📝 星際日記</h2>
-  <p class="fade-in-section">這裡記錄著我生活的片段與心情，有時候是喜悅的時光，有時候則是寧靜的沉澱。</p>
+  <p class="fade-in-section">記錄我生活片段的手帳小畫，每一頁都是生活裡的光。</p>
 
   <div class="pet-preview">
-    <div class="preview-card" onclick="openLightbox('日記 A', 'images/日記1.jpg', '某天走在林間的靈感速寫。')">
+    <div class="preview-card" onclick="openLightbox('日記 A', 'images/日記1.jpg', '望著星空的那晚，我想起了好多夢想。')">
       <img src="images/日記1.jpg" alt="日記1">
       <p class="fade-in-section">日記 A</p>
     </div>
 
-    <div class="preview-card" onclick="openLightbox('日記 B', 'images/日記2.jpg', '夜裡的手帳塗鴉，紀錄下心情波動。')">
+    <div class="preview-card" onclick="openLightbox('日記 B', 'images/日記2.jpg', '草莓季節的手帳紀錄，像味蕾上的記憶。')">
       <img src="images/日記2.jpg" alt="日記2">
       <p class="fade-in-section">日記 B</p>
     </div>
+
+    <div class="preview-card" onclick="openLightbox('日記 C', 'images/日記3.jpg', '房間窗邊的靜謐時光，是最安心的角落。')">
+      <img src="images/日記3.jpg" alt="日記3">
+      <p class="fade-in-section">日記 C</p>
+    </div>
+
+    <div class="preview-card" onclick="openLightbox('日記 D', 'images/日記4.jpg', '鳥兒清晨的鳴叫聲，讓我開始新的一頁。')">
+      <img src="images/日記4.jpg" alt="日記4">
+      <p class="fade-in-section">日記 D</p>
+    </div>
   </div>
 </section>
+
+
 
 
 <section id="core" class="content-page core-bg">
